unpackaged/main/default/objects/conference360__Event__c/fields/Calendar_Link_for_SSO_Events__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Link_for_SSO_Events__c</fullName>
    <description>Referenced by Barcode app to generate QR code</description>
    <formula>conference360__Event_Group__r.Calendar_Link_for_SSO_Events__c</formula>
    <inlineHelpText>Link to access Event Calendar hidden behind MyMDC SSO login</inlineHelpText>
    <label>Calendar Link for SSO Events</label>
    <type>Text</type>
</CustomField>