unpackaged/main/default/objects/conference360__Event__c/fields/conference360__After_Submission__c.field-meta.xml
<CustomField>
    <fullName>conference360__After_Submission__c</fullName>
    <inlineHelpText>Show success message provides a personal message after someone registers for your event. Redirect to URL redirects the person to a defined link.</inlineHelpText>
    <label>Post Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show Success Message</fullName>
            </value>
            <value>
                <fullName>Redirect to URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>