unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Alternative_Image_Text__c.field-meta.xml
<CustomField>
    <fullName>conference360__Alternative_Image_Text__c</fullName>
    <inlineHelpText>Please add descriptive text to accompany your image. Alternative text is important for visually-impaired users who rely on screen readers. Provide a clear and concise description of the image to ensure accessibility.</inlineHelpText>
    <label>Alternative Text for Visual Impairment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>