unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Attendee_Counts_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Counts_Last_Updated__c</fullName>
    <label>Attendee Counts Last Updated</label>
    <type>DateTime</type>
</CustomField>