unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Attendee_Limit__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Limit__c</fullName>
    <inlineHelpText>This is the sum of the total capacity of your tickets for Students and Guests. If you need to adjust the capacity of your event, you need to do it directly on the event item. If you need help, reach out to your System Administrator.</inlineHelpText>
    <label>Total Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>