unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Attendee_Limit_Buffer__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Limit_Buffer__c</fullName>
    <label>Attendee Limit Buffer</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>