unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Attendee_Visibility__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Visibility__c</fullName>
    <description>Decide when to show attendee tab on the event listing.</description>
    <inlineHelpText>Decide when to show attendee tab on the event listing.</inlineHelpText>
    <label>Attendee Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
                <isActive>false</isActive>
                <label>Post-Registration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>