unpackaged/main/default/objects/conference360__Event__c/fields/conference360__AttendeeLink_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__AttendeeLink_Message__c</fullName>
    <inlineHelpText>Include a personal message for the attendees you have invited to this event through AttendeeLink. There will already be a title above this message that says, &quot;Welcome [Attendee&#39;s First Name],&quot;</inlineHelpText>
    <label>AttendeeLink Invite Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>