unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Automated_Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>conference360__Automated_Email_From_Address__c</fullName>
    <label>Automated Email From Address</label>
    <type>Email</type>
</CustomField>