unpackaged/main/default/objects/conference360__Event__c/fields/conference360__BT_Form_Post_Registration__c.field-meta.xml
<CustomField>
    <fullName>conference360__BT_Form_Post_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ask custom questions post-checkout.</description>
    <inlineHelpText>Ask custom questions post-checkout.</inlineHelpText>
    <label>Form (Post-Registration)</label>
    <referenceTo>bt_base__Form__c</referenceTo>
    <relationshipLabel>Events (Form (Post-Registration))</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>