unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Calendar_Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Calendar_Description__c</fullName>
    <label>Calendar Description</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>