unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Calendar_Location__c.field-meta.xml
<CustomField>
    <fullName>conference360__Calendar_Location__c</fullName>
    <label>Calendar Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>