unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Campaign__c.field-meta.xml
<CustomField>
    <fullName>conference360__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an Attendee registers, they&#39;ll be auto-added to this Campaign as a Campaign Member. If they were added to the Event from a Campaign to start with the invite, their status will be updated (they won&#39;t be duplicated).</description>
    <inlineHelpText>When an Attendee registers, they&#39;ll be auto-added to this Campaign as a Campaign Member. If they were added to the Event from a Campaign to start with the invite, their status will be updated (they won&#39;t be duplicated).</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>