unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Canceled__c.field-meta.xml
<CustomField>
    <fullName>conference360__Canceled__c</fullName>
    <inlineHelpText>The summary of registered or invited attendees who canceled.</inlineHelpText>
    <label>Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>