unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Capacity_Threshold_Enabled__c.field-meta.xml
<CustomField>
    <fullName>conference360__Capacity_Threshold_Enabled__c</fullName>
    <inlineHelpText>If enabled, it will let the customer know how many tickets are left when there is a limited quantity available.</inlineHelpText>
    <label>Capacity Threshold Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>