unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Capacity_Threshold_Limit__c.field-meta.xml
<CustomField>
    <fullName>conference360__Capacity_Threshold_Limit__c</fullName>
    <inlineHelpText>Defines how many tickets are left before notifying the customer on checkout there is limited quantity available.</inlineHelpText>
    <label>Capacity Threshold Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>