unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Category__c</fullName>
    <inlineHelpText>Categorize the type of Event to provide a better event search and reporting.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open House</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Onboarding Event</fullName>
            </value>
            <value>
                <fullName>High School Event</fullName>
            </value>
            <value>
                <fullName>Campus Tours</fullName>
            </value>
            <value>
                <fullName>FAFSA</fullName>
            </value>
            <value>
                <fullName>Other On-Campus Event</fullName>
            </value>
            <value>
                <fullName>Other Community Event</fullName>
            </value>
            <value>
                <fullName>Class/Workshop</fullName>
                <isActive>false</isActive>
                <label>Class/Workshop</label>
            </value>
            <value>
                <fullName>Conference</fullName>
                <isActive>false</isActive>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Expo</fullName>
                <isActive>false</isActive>
                <label>Expo</label>
            </value>
            <value>
                <fullName>Festival</fullName>
                <isActive>false</isActive>
                <label>Festival</label>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
                <isActive>false</isActive>
                <label>Fundraiser</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <isActive>false</isActive>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Reunion</fullName>
                <isActive>false</isActive>
                <label>Reunion</label>
            </value>
            <value>
                <fullName>Social/Networking</fullName>
                <isActive>false</isActive>
                <label>Social/Networking</label>
            </value>
            <value>
                <fullName>Trade Show</fullName>
                <isActive>false</isActive>
                <label>Trade Show</label>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
                <isActive>false</isActive>
                <label>Virtual Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>