unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Catering_F_B_Expenses__c.field-meta.xml
<CustomField>
    <fullName>conference360__Catering_F_B_Expenses__c</fullName>
    <description>Actual spend on Catering (Food &amp; Beverage) for this Event. Populated automatically from related Budget &amp; Expense records but can be overridden if entered directly. Updates to B&amp;E records will overwrite manual field entries though.</description>
    <inlineHelpText>Actual spend on Catering (Food &amp; Beverage) for this Event. Populated automatically from related Budget &amp; Expense records but can be overridden if entered directly. Updates to B&amp;E records will overwrite manual field entries though.</inlineHelpText>
    <label>Catering (F&amp;B) Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>