unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Code_Settings__c.field-meta.xml
<CustomField>
    <fullName>conference360__Code_Settings__c</fullName>
    <description>Define the handling of codes to accept for this event.</description>
    <inlineHelpText>Determine if the promo code should be optional, required, or hidden completely during registration.</inlineHelpText>
    <label>Code Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
                <default>true</default>
                <label>Hide</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>