unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Communication_Preferences__c.field-meta.xml
<CustomField>
    <fullName>conference360__Communication_Preferences__c</fullName>
    <label>Email Notifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Registration Canceled</fullName>
            </value>
            <value>
                <fullName>Waitlist Pending</fullName>
            </value>
            <value>
                <fullName>Waitlist Approved</fullName>
            </value>
            <value>
                <fullName>Waitlist Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>