unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Confirmation_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set the Confirmation Email template to auto-send when Attendee: Registration Status = Registered.</description>
    <inlineHelpText>Set the Confirmation Email template to auto-send when Attendee: Registration Status = Registered.</inlineHelpText>
    <label>Confirmation Email</label>
    <referenceTo>conference360__Email_Template__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>