unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Custom_CSS_Url__c.field-meta.xml
<CustomField>
    <fullName>conference360__Custom_CSS_Url__c</fullName>
    <inlineHelpText>The url to the Custom CSS to use for this Event. If set, this Custom CSS overrides the Custom CSS set on the Event Settings.</inlineHelpText>
    <label>Custom CSS Url</label>
    <type>Url</type>
</CustomField>