unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <inlineHelpText>Include as much information to make it easier for people to search for your event and register once they are here.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>