unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Discount__c.field-meta.xml
<CustomField>
    <fullName>conference360__Discount__c</fullName>
    <description>The total discount amount from the overall registrations.</description>
    <inlineHelpText>The total discount amount from the overall registrations.</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>