unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Donation_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>conference360__Donation_Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you have a paid event and want to split donations during checkout, set the Donation Payment Gateway where money should be processed through.</description>
    <inlineHelpText>Select a Payment Gateway through which Donations should be processed. Note - Should be the same payment processor as your default payment gateway for this Event.</inlineHelpText>
    <label>Donation Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Events (Donations)</relationshipLabel>
    <relationshipName>Event_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>