unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Estimated_Income__c.field-meta.xml
<CustomField>
    <fullName>conference360__Estimated_Income__c</fullName>
    <description>The estimated income (gross revenue) for this Event.</description>
    <inlineHelpText>The estimated income (gross revenue) for this Event.</inlineHelpText>
    <label>Estimated Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>