unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Event_Capacity_Counter_Handler__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Capacity_Counter_Handler__c</fullName>
    <description>This field is used to store the pending capacity of the event items and sessions</description>
    <inlineHelpText>This field is used to store the pending capacity of the event items and sessions. Please do not update the fields manually.</inlineHelpText>
    <label>Event Capacity Handler(DO NOT UPDATE)</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>